--- a/index.html
+++ b/index.html
@@ -1114,7 +1114,7 @@ input[type=number]::-webkit-outer-spin-button {
 			<div class="but_head" style="transition-delay: 0.05s;display:none;"><span>Campus Ambassdor</span></div>
 			<div class="but_head" style="transition-delay: 0.1s"><span>EVENTS</span></div>
 			<div class="but_head" style="transition-delay: 0.15s"><span>THINK AGAIN</span></div>
-			<div class="but_head" style="transition-delay: 0.2s"><span>REGISTRATION</span></div>
+			<div class="but_head" style="transition-delay: 0.2s"><span>REGISTER</span></div>
 			<div class="but_head" style="transition-delay: 0.25s"><span>PAPER & PRESENTATION</span></div>
 			<div class="but_head" style="transition-delay: 0.3s"><span>SPONSORS</span></div>
 			<div class="but_head" style="transition-delay: 0.35s"><span>CONTACTS</span></div>
@@ -1694,7 +1694,7 @@ sponsload();
 		dept:'President',
 		img_url:'images/contacts/prez.jpg',
 		fb_link:'https://www.facebook.com/akhil.reddy.148',
-		cname:'Akhil Reddy',
+		cname:'AKHIL REDDY',
 		phone:'+91-7728835792',
 		email:'president[at]pilani.bits-pilani.ac.in',
 	},
@@ -1702,7 +1702,7 @@ sponsload();
 		dept:'General Secretary',
 		img_url:'images/contacts/gen.jpg',
 		fb_link:'https://www.facebook.com/rijul.dutta',
-		cname:'Rijul Dutta',
+		cname:'RIJUL DUTTA',
 		phone:'+91-8427686647',
 		email:'gensec[at]pilani.bits-pilani.ac.in',
 	},
@@ -1710,7 +1710,7 @@ sponsload();
 		dept:'For sponsorship and marketing',
 		img_url:'images/contacts/spons.jpg',
 		fb_link:'https://www.facebook.com/mohammed.motiwala1',
-		cname:'Mohammed Motiwala',
+		cname:'MOHAMMED MOTIWALA',
 		phone:'+91-7728086752',
 		email:'sponsorship[at]bits-apogee[dot]org',
 	},
@@ -1718,7 +1718,7 @@ sponsload();
 		dept:'For reception and accommodation',
 		img_url:'images/contacts/recnacc.jpg',
 		fb_link:'https://www.facebook.com/aditya.gogri',
-		cname:'Aditya Gogri',
+		cname:'ADITYA GOGRI',
 		phone:'+91-9772229698',
 		email:'recnacc[at]bits-apogee[dot]org',
 	},
@@ -1726,7 +1726,7 @@ sponsload();
 		dept:'For invites and correspondence',
 		img_url:'images/contacts/pcr.jpg',
 		fb_link:'https://www.facebook.com/profile.php?id=100006361090120',
-		cname:'Aditya Chauhan',
+		cname:'ADITYA CHAUHAN',
 		phone:'+91-8239822574',
 		email:'pcr[at]bits-apogee[dot]org',
 	},
@@ -1734,7 +1734,7 @@ sponsload();
 		dept:'For Publicity and Online Partnership',
 		img_url:'images/contacts/adp.jpg',
 		fb_link:'https://www.facebook.com/kunal.barapatre.31',
-		cname:'Kunal Barapatre',
+		cname:'KUNAL BARAPATRE',
 		phone:'+91-7728095594',
 		email:'adp[at]bits-apogee[dot]org',
 	},
@@ -1742,23 +1742,23 @@ sponsload();
 		dept:'For projects, events and registration',
 		img_url:'images/contacts/controls.jpg',
 		fb_link:'https://www.facebook.com/falguni.agrawal.965',
-		cname:'Falguni Agarwal',
+		cname:'FALGUNI AGARWAL',
 		phone:'+91-9928089204',
 		email:'controls[at]bits-apogee[dot]org',
 	},
 	{
-		dept:'For paper presentations',
+		dept:'For paper presentations and Guest Lectures',
 		img_url:'images/contacts/pep.jpg',
 		fb_link:'https://www.facebook.com/adivijaykumar',
-		cname:'Aditya V. kumar',
+		cname:'ADITYA V KUMAR',
 		phone:'+91-8385857855, +91-8058722661',
 		email:'pep[at]bits-apogee[dot]org, guestlectures[at]bits-apogee[dot]org',
 	},
 	{
-		dept:'For website and other technical queries',
+		dept:'For website and online registration queries',
 		img_url:'images/contacts/dvm.jpg',
 		fb_link:'https://www.facebook.com/pranjalONfb',
-		cname:'Pranjal Gupta',
+		cname:'PRANJAL GUPTA',
 		phone:'+91-8094076999',
 		email:'webmaster[at]bits-apogee[dot]org',
 	}
@@ -1769,7 +1769,7 @@ sponsload();
 	var dt="";
 	for(i=0;i<contacts_data.length;++i)
 	{
-		dt+= '<div class="contactinfo"><div class="contact_dept">'+contacts_data[i].dept+'</div><div style="position:relative"><img src="'+ contacts_data[i].img_url+'" class="contact_img" /><a href="'+ contacts_data[i].fb_link +'" target="_blank"><div class="fb_link" ><?xml version="1.0" ?><!DOCTYPE svg  PUBLIC "-//W3C//DTD SVG 1.1//EN"  "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd"><svg  class="confb" enable-background="new 0 0 56.693 56.693" height="30px" id="Layer_1" version="1.1" viewBox="0 0 56.693 56.693" width="30px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><style type="text/css"><![CDATA[svg .confb{ cursor: pointer;transition: 150ms;transition-timing-function: ease-in-out;-webkit-transition: 150ms;-webkit-transition-timing-function: ease-in-out;fill:#fff;} .confb:hover{ fill: #3b5998;}]]></style><path d="M40.43,21.739h-7.645v-5.014c0-1.883,1.248-2.322,2.127-2.322c0.877,0,5.395,0,5.395,0V6.125l-7.43-0.029  c-8.248,0-10.125,6.174-10.125,10.125v5.518h-4.77v8.53h4.77c0,10.947,0,24.137,0,24.137h10.033c0,0,0-13.32,0-24.137h6.77  L40.43,21.739z"/></svg></div></a></div><div class="contact_det">'+contacts_data[i].cname +'<br>'+contacts_data[i].phone +'<br>'+contacts_data[i].email+'</div></div>';
+		dt+= '<div class="contactinfo"><div class="contact_dept">'+contacts_data[i].dept+'</div><div style="position:relative"><img src="'+ contacts_data[i].img_url+'" class="contact_img" /><a href="'+ contacts_data[i].fb_link +'" target="_blank"><div class="fb_link" ><?xml version="1.0" ?><!DOCTYPE svg  PUBLIC "-//W3C//DTD SVG 1.1//EN"  "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd"><svg  class="confb" enable-background="new 0 0 56.693 56.693" height="30px" id="Layer_1" version="1.1" viewBox="0 0 56.693 56.693" width="30px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><style type="text/css"><![CDATA[svg .confb{ cursor: pointer;transition: 150ms;transition-timing-function: ease-in-out;-webkit-transition: 150ms;-webkit-transition-timing-function: ease-in-out;fill:#fff;} .confb:hover{ fill: #3b5998;}]]></style><path d="M40.43,21.739h-7.645v-5.014c0-1.883,1.248-2.322,2.127-2.322c0.877,0,5.395,0,5.395,0V6.125l-7.43-0.029  c-8.248,0-10.125,6.174-10.125,10.125v5.518h-4.77v8.53h4.77c0,10.947,0,24.137,0,24.137h10.033c0,0,0-13.32,0-24.137h6.77  L40.43,21.739z"/></svg></div></a></div><div class="contact_det"><b>'+contacts_data[i].cname +'</b><br>'+contacts_data[i].phone +'<br>'+contacts_data[i].email+'</div></div>';
 	}
 
 	$('#c_data').html(dt);
