--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ html,body {
 
 .contact_dept {
     min-height: 60px;
-    font-weight: 900;
+    font-weight: 900 !important;
 }
 
 .header .head_content{
@@ -779,12 +779,12 @@ object{
 	word-wrap: break-word;
 }
 
-.contactinfo>div:nth-child(2)>img
-{
-	width: 210px;
-	height: 210px;
-	margin: 2% 5% 2% 5%;
-	border-radius: 50%;
+.contactinfo>div:nth-child(2)>img {
+    width: 210px;
+    height: 210px;
+    margin: 2% 5% 2% 5%;
+    border-radius: 50%;
+    border: 2px solid white;
 }
 
 .contactinfo>div:nth-child(3)
@@ -889,20 +889,19 @@ p.about_content{
 /*--------------------Sponsors----------------------*/
 #spons
 {
-	background: #f8512a;
+	background: #00838F;
 }
 .spons_cont
 {
 	position: relative;
 	display: inline-block;
-	margin: 25px;
-	width: 200px;
-	height: 200px;
-	border: 1px solid #ddd;
+	margin: 35px;
+	width: 250px;
+	height: 250px;
+	border: 1px solid #065b63;
 	/*background: url("images/sponsback.jpg") no-repeat center center #f9f9f9;*/
 	background-color: white;
- 
-	box-shadow: 3px 3px 20px -1px #444;
+ box-shadow: 2px 2px 20px -2px #222;
 	-moz-transition: all 0.2s ease-in;
 	-webkit-transition: all 0.2s ease-in;
 	transition: all 0.2s ease-in;
@@ -910,7 +909,7 @@ p.about_content{
 
 .spons_cont:hover{
 	/*border:1px solid #999;*/
-	box-shadow: 2px 2px 20px -2px #222;
+	/*box-shadow: 2px 2px 20px -2px #222 inset;*/
 	
 	/* CSS3 inset shadow: */
 /*	-moz-box-shadow:0 0 30px #999 inset;
@@ -920,8 +919,8 @@ p.about_content{
 
 .spons_img
 {
-	width: 150px;
-	max-height: 150px;
+	width: 200px;
+	max-height: 200px;
 }
 
 /*--------------------Sponsors End----------------------*/
