--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 	<script type="text/javascript" src="js/jquery.min(1.11.1).js"></script>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
-	 <!-- // <script src="https://maps.googleapis.com/maps/api/js"></script>  -->
-	<!-- // <script type="text/javascript" src="js/customMap.js"></script> -->
+	<script src="https://maps.googleapis.com/maps/api/js"></script> 
+	<script type="text/javascript" src="js/customMap.js"></script>
 
 </head>
 <style>
@@ -1138,7 +1138,7 @@ input[type=number]::-webkit-outer-spin-button {
 /*PAPER AND PRESENTATION------------------------------------*/
 
 	#red0{
-		background: #95a5a6;
+		background: #00838F;
 		height: 100%;
 		width: 100%;
 		display: none;
@@ -1147,7 +1147,7 @@ input[type=number]::-webkit-outer-spin-button {
 		top: 0;
 	}
 	#blue0{
-		background:#34495e;
+		background:#CC2A41;
 		width: 50%;
 		height: 100%;
 		top: 0;
@@ -1219,15 +1219,15 @@ input[type=number]::-webkit-outer-spin-button {
     color: #f9f9f9;
 	}
 	.content{
-		font-size: 130%;
-	    color: #333;
+		font-size: 1.3em;
+	    color: #fff;
 	    text-align: center;
 	    padding: 20px;
 	}
 
 	.button {
 		font-weight: bold;
-		background: #009985;
+		background: #b71c1c;
 	  	color:#fff;
 		font-size: 1.2em;
 		border: none;
@@ -1250,7 +1250,7 @@ input[type=number]::-webkit-outer-spin-button {
 		background:#068271;
 	}
 
-	.button.calm:hover {
+	.button:hover {
 		outline: none;
 		background: #068271;
 	  color:#fff;
