--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@ object{
 			border-bottom-right-radius: 110px;
 			border-bottom-left-radius: 110px;
 			overflow: hidden;
-			background-position: center bottom;
+			background-position: center 0px;
 			background-size: 100% auto;
 			background-repeat: no-repeat;
 			-moz-transition: all 0.3s ease-in-out;
@@ -458,7 +458,6 @@ object{
 			    position: absolute;
 			    bottom: 0;
 			    padding: 10px;
-			    /* padding-top: 0px; */
 			    text-align: center;
 			    font-weight: 900;
 			    font-size: 14px;
@@ -723,7 +722,7 @@ object{
 	border-bottom-right-radius: 125px;
 	border-bottom-left-radius: 125px;
 	overflow: hidden;
-	background-position: center 400%;
+	background-position: center 250px;
 	background-size: 100% auto;
 	background-repeat: no-repeat;
 	-moz-transition: all 0.2s ease-in;
