--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
 
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<!-- <link href='https://fonts.googleapis.com/css?family=Roboto:700' rel='stylesheet' type='text/css'> -->
-	<!-- <link href='https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900' rel='stylesheet' type='text/css'> -->
+	<link href='https://fonts.googleapis.com/css?family=Roboto:700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900' rel='stylesheet' type='text/css'>
 
 	<script type="text/javascript" src="js/jquery.min(1.11.1).js"></script>
 
@@ -99,6 +99,10 @@
     -webkit-transform: scale(1, 1);
             transform: scale(1, 1);
   }
+}
+
+body{
+	background-color: #f6f6f6;
 }
 .slide{
 	-webkit-transform: scale(0, 0) translateY(0);
