--- a/index.html
+++ b/index.html
@@ -286,10 +286,10 @@ position: absolute;
 			<div class="but_head" style="transition-delay: 0s"><span>ABOUT</span></div>
 			<div class="but_head" style="transition-delay: 0.05s;display:none;"><span>Campus Ambassdor</span></div>
 			<div class="but_head" style="transition-delay: 0.1s"><span onclick="eventdinit()">EVENTS</span></div>
-			<div class="but_head" style="transition-delay: 0.15s"><span>THINK AGAIN</span></div>
-			<div class="but_head" style="transition-delay: 0.2s"><span onclick="formup()">REGISTER</span></div>
-			<div class="but_head" style="transition-delay: 0.25s"><span onclick="pnpinit()">PAPER & PRESENTATION</span></div>
-			<div class="but_head" style="transition-delay: 0.3s"><span>SPONSORS</span></div>
+			<div class="but_head" style="transition-delay: 0.15s"><span>PAST SPEAKERS</span></div>
+			<div class="but_head" style="transition-delay: 0.2s"><span onclick="pnpinit()">PAPER & PRESENTATION</span></div>
+			<div class="but_head" style="transition-delay: 0.25s"><span>LAST YEAR'S SPONSORS</span></div>
+			<div class="but_head" style="transition-delay: 0.30s"><span onclick="formup()">REGISTER</span></div>
 			<div class="but_head" style="transition-delay: 0.35s"><span onclick="setTimeout(initMap,1000)">CONTACTS</span></div>
 		
 			<div id="social">
